--- a/fichaje-app/src/components/Sidebar.css
+++ b/fichaje-app/src/components/Sidebar.css
@@ -9,12 +9,29 @@
     left: 0;
     display: flex;
     flex-direction: column;
+    transform: translateX(-100%);
+    transition: transform 0.3s ease-in-out;
+    z-index: 1000;
+}
+
+.sidebar.open {
+    transform: translateX(0);
 }
 
 .sidebar-header {
-    text-align: center;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     padding-bottom: 20px;
     border-bottom: 1px solid #1c2a5e; /* Lighter border for dark bg */
+}
+
+.sidebar-close-btn {
+    background: none;
+    border: none;
+    color: white;
+    font-size: 2rem;
+    cursor: pointer;
 }
 
 .sidebar-logo {
@@ -39,7 +56,7 @@
     text-decoration: none;
     color: #ffffff;
     display: block;
-    padding: 10px;
+    padding: 6px 12px;
     border-radius: 5px;
     transition: background-color 0.2s; /* Smooth transition */
 }
@@ -63,7 +80,7 @@
     background: none;
     border: none;
     color: #ffffff;
-    padding: 10px;
+    padding: 6px 12px;
     text-align: left;
     width: 100%;
     font-size: 1em;
